changing slideshare to link

--- a/_posts/2011-08-31-devday-bh-2011.md
+++ b/_posts/2011-08-31-devday-bh-2011.md
@@ -45,17 +45,16 @@ Conheci mais uma galera animal lá. E como eu imaginei o povo de MG é demais! M
 Um outro ponto alto no evento foi assistir o meu amigo @HigorCesar mostrar o cenário FOR REAL de mudanças introduzidas na empresa em que trabalhamos atualmente. Arrebentou!
 
 Segue slide da minha palestras e algumas fotos..
+
+[Link para os SLIDES](http://www.slideshare.net/rodrigovidal777/devday-bh-2011-programao-funcional)
+
+
+
 <div>
 <img src="{{BASE_PATH}}/imgs/devday1.png" />
 <img src="{{BASE_PATH}}/imgs/devday2.png" />
 </div>
-<table>
-	<tr>
-		<td>
-			<iframe src="http://www.slideshare.net/slideshow/embed_code/9078787" width="425" height="355" frameborder="0" scrolling="no"></iframe> 
-		</td>
-	</tr>
-</table>
+
 Abraço,
 Rodrigo Vidal
 
