--- a/_posts/2011-01-11-git_part1.md
+++ b/_posts/2011-01-11-git_part1.md
@@ -2,7 +2,7 @@
 layout: post
 category : lessons
 title: "Controle de Versão com Git - Parte 1"
-tags : [Eventos]
+tags : [Git]
 ---
 {% include JB/setup %}
 
